# projet-2025-hexcode

./: .gitignore  CMakeLists.txt  README.md  plot_env.sh  receiver.txt  setupPlot.sh
script/: analysis.py  benchmark.py  benchmark_ad-hoc.py  benchmark_compress.py  benchmark_in-situ.py  decompress.py  plot.py  plot_ad_hoc_perf.py  plot_benchmark_in-situ.py  plot_compress.py  plot_in-situ.py  plot_sismo.py  plot_slice.py  plot_snapshot.py  rmse_quant.py  test.csv
src/main/fe/include/: ToPPMConverter.h  sem_proxy.h  sem_proxy_options.h
src/main/fe/src/: main.cc  sem_proxy.cc
src/utils/include/: common_macros.h
